tests/snapshots/memchr_nullable_pointer.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

fn __slate_memchr(s: *const core::ffi::c_void, c: i32, n: usize) -> *mut core::ffi::c_void {
    let b: u8 = c as u8;
    let bytes: *const u8 = s as *const u8;
    let mut i: usize = 0;
    while i < n {
        if (unsafe { *bytes.add(i) }) == b {
            return (unsafe { bytes.add(i) }) as *mut core::ffi::c_void;
        }
        i += 1;
    }
    return std::ptr::null_mut();
}

#[repr(C)]
struct __SlateAllocaFrame0(*mut u8, *mut u8, [u8; 4], i32);

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn main() {
    let mut __slate_alloca_frame0: __SlateAllocaFrame0 = __SlateAllocaFrame0(std::ptr::null_mut(), std::ptr::null_mut(), [0; 4], 0);
    let _v0: i32 = 0;
    __slate_alloca_frame0.3 = _v0;
    __slate_alloca_frame0.2 = [10, 20, 30, 40];
    let _v1: *mut u8 = __slate_alloca_frame0.2.as_mut_ptr() as *mut u8;
    let _v2: *mut core::ffi::c_void = _v1 as *mut core::ffi::c_void;
    let _v3: i32 = 30;
    let _v4: u64 = 4;
    let _v5: *mut core::ffi::c_void = __slate_memchr(_v2, _v3 as i32, _v4 as usize);
    let _v6: *mut u8 = _v5 as *mut u8;
    __slate_alloca_frame0.1 = _v6;
    let _v7: *mut u8 = __slate_alloca_frame0.2.as_mut_ptr() as *mut u8;
    let _v8: *mut core::ffi::c_void = _v7 as *mut core::ffi::c_void;
    let _v9: i32 = 99;
    let _v10: u64 = 4;
    let _v11: *mut core::ffi::c_void = __slate_memchr(_v8, _v9 as i32, _v10 as usize);
    let _v12: *mut u8 = _v11 as *mut u8;
    __slate_alloca_frame0.0 = _v12;
    let _v13: *mut i8 = b"%ld %d\n\0".as_ptr() as *mut i8;
    let _v14: *mut u8 = __slate_alloca_frame0.1;
    let _v15: *mut u8 = __slate_alloca_frame0.2.as_mut_ptr() as *mut u8;
    let _v16: i64 = unsafe { _v14.offset_from(_v15) as i64 };
    let _v17: *mut u8 = __slate_alloca_frame0.0;
    let _v18: *mut u8 = std::ptr::null_mut();
    let _v19: bool = _v17 == _v18;
    let _v20: i32 = _v19 as i32;
    let _v21: i32 = unsafe { printf(_v13 as *const i8, _v16, _v20) };
    let _v22: i32 = 0;
    __slate_alloca_frame0.3 = _v22;
    let _v23: i32 = __slate_alloca_frame0.3;
    std::process::exit(_v23 as i32);
}
