tests/snapshots/mkstemp.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn mkstemp(_0: *mut i8) -> i32;
    fn printf(_0: *const i8, ...) -> i32;
    fn close(_0: i32) -> i32;
    fn unlink(_0: *const i8) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut path: [i8; 13] = [0; 13];
    let mut fd: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    path = [115, 108, 97, 116, 101, 45, 88, 88, 88, 88, 88, 88, 0];
    let _v1: *mut i8 = path.as_mut_ptr() as *mut i8;
    let _v2: i32 = unsafe { mkstemp(_v1 as *mut i8) };
    fd = _v2;
    let _v3: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v4: i32 = fd;
    let _v5: i32 = 0;
    let _v6: bool = _v4 >= _v5;
    let _v7: i32 = _v6 as i32;
    let _v8: i32 = unsafe { printf(_v3 as *const i8, _v7) };
    {
        let _v9: i32 = fd;
        let _v10: i32 = 0;
        let _v11: bool = _v9 >= _v10;
        if _v11 {
            let _v12: i32 = fd;
            let _v13: i32 = unsafe { close(_v12 as i32) };
            let _v14: *mut i8 = path.as_mut_ptr() as *mut i8;
            let _v15: i32 = unsafe { unlink(_v14 as *const i8) };
        }
    }
    let _v16: i32 = __retval;
    std::process::exit(_v16 as i32);
}
