tests/snapshots/nested_anon_struct_fields.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

#[repr(C)]
#[derive(Clone, Copy)]
union _unnamed_at__home_takashi_Projects_slate_tests_fixtures_nested_anon_struct_fields_c_5_3_ {
    alias: _unnamed_at__home_takashi_Projects_slate_tests_fixtures_nested_anon_struct_fields_c_6_5_,
    tag: _unnamed_at__home_takashi_Projects_slate_tests_fixtures_nested_anon_struct_fields_c_9_5_,
}


#[repr(C)]
#[derive(Clone, Copy)]
struct _unnamed_at__home_takashi_Projects_slate_tests_fixtures_nested_anon_struct_fields_c_6_5_ {
    value: *mut i8,
}


#[repr(C)]
#[derive(Clone, Copy)]
struct _unnamed_at__home_takashi_Projects_slate_tests_fixtures_nested_anon_struct_fields_c_9_5_ {
    handle: *mut i8,
    suffix: *mut i8,
}


#[repr(C)]
#[derive(Clone, Copy)]
union anon_0 {
    __slate_anon_0: anon_1,
    tag: anon_2,
}


#[repr(C)]
#[derive(Clone, Copy)]
struct anon_1 {
    __slate_anon_0: *mut i8,
}


#[repr(C)]
#[derive(Clone, Copy)]
struct anon_2 {
    handle: *mut i8,
    suffix: *mut i8,
}


#[repr(C)]
#[derive(Clone, Copy)]
struct event {
    r#type: i32,
    data: _unnamed_at__home_takashi_Projects_slate_tests_fixtures_nested_anon_struct_fields_c_5_3_,
}


unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut e: event = event { r#type: 0, data: _unnamed_at__home_takashi_Projects_slate_tests_fixtures_nested_anon_struct_fields_c_5_3_ { alias: _unnamed_at__home_takashi_Projects_slate_tests_fixtures_nested_anon_struct_fields_c_6_5_ { value: std::ptr::null_mut() } } };
    let mut h: [i8; 2] = [0; 2];
    let mut s: [i8; 2] = [0; 2];
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: i32 = 1;
    e.r#type = _v1;
    h = [72, 0];
    s = [83, 0];
    let _v2: *mut i8 = h.as_mut_ptr() as *mut i8;
    unsafe {
        e.data.tag.handle = _v2;
    }
    let _v3: *mut i8 = s.as_mut_ptr() as *mut i8;
    unsafe {
        e.data.tag.suffix = _v3;
    }
    let _v4: *mut i8 = b"%d %s%s\n\0".as_ptr() as *mut i8;
    let _v5: i32 = e.r#type;
    let _v6: *mut i8 = unsafe { e.data.tag.handle };
    let _v7: *mut i8 = unsafe { e.data.tag.suffix };
    let _v8: i32 = unsafe { printf(_v4 as *const i8, _v5, _v6, _v7) };
    let _v9: i32 = 0;
    __retval = _v9;
    let _v10: i32 = __retval;
    std::process::exit(_v10 as i32);
}
