tests/snapshots/nested_structs.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

#[repr(C)]
#[derive(Clone, Copy)]
struct Inner {
    x: i32,
    y: i32,
}


#[repr(C)]
#[derive(Clone, Copy)]
struct Outer {
    a: Inner,
    z: i32,
}


unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut o: Outer = Outer { a: Inner { x: 0, y: 0 }, z: 0 };
    let mut init: Outer = Outer { a: Inner { x: 0, y: 0 }, z: 0 };
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: i32 = 3;
    o.a.x = _v1;
    let _v2: i32 = 4;
    o.a.y = _v2;
    let _v3: i32 = 5;
    o.z = _v3;
    let _v4: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v5: i32 = o.a.x;
    let _v6: i32 = o.a.y;
    let _v7: i32 = _v5 + _v6;
    let _v8: i32 = o.z;
    let _v9: i32 = _v7 + _v8;
    let _v10: i32 = unsafe { printf(_v4 as *const i8, _v9) };
    init = Outer { a: Inner { x: 1, y: 2 }, z: 3 };
    let _v11: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v12: i32 = init.a.x;
    let _v13: i32 = init.a.y;
    let _v14: i32 = _v12 + _v13;
    let _v15: i32 = init.z;
    let _v16: i32 = _v14 + _v15;
    let _v17: i32 = unsafe { printf(_v11 as *const i8, _v16) };
    let _v18: i32 = 0;
    __retval = _v18;
    let _v19: i32 = __retval;
    std::process::exit(_v19 as i32);
}
