tests/snapshots/non_int_fields.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

#[repr(C)]
#[derive(Clone, Copy)]
struct Mixed {
    tag: i8,
    code: u8,
    ratio: f32,
    total: f64,
}


#[repr(C)]
#[derive(Clone, Copy)]
union Scalar {
    tag: i8,
    code: u8,
    ratio: f32,
    total: f64,
}


unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn struct_values() -> i32 {
    let mut __retval: i32 = 0;
    let mut m: Mixed = Mixed { tag: 0, code: 0, ratio: 0.0, total: 0.0 };
    let _v0: i8 = 65;
    m.tag = _v0;
    let _v1: u8 = 200;
    m.code = _v1;
    let _v2: f32 = 1.5;
    m.ratio = _v2;
    let _v3: f64 = 2.25;
    m.total = _v3;
    let _v4: *mut i8 = b"%c\n\0".as_ptr() as *mut i8;
    let _v5: i8 = m.tag;
    let _v6: i32 = _v5 as i32;
    let _v7: i32 = unsafe { printf(_v4 as *const i8, _v6) };
    let _v8: *mut i8 = b"%u\n\0".as_ptr() as *mut i8;
    let _v9: u8 = m.code;
    let _v10: i32 = _v9 as i32;
    let _v11: i32 = unsafe { printf(_v8 as *const i8, _v10) };
    let _v12: *mut i8 = b"%f\n\0".as_ptr() as *mut i8;
    let _v13: f32 = m.ratio;
    let _v14: f64 = _v13 as f64;
    let _v15: i32 = unsafe { printf(_v12 as *const i8, _v14) };
    let _v16: *mut i8 = b"%f\n\0".as_ptr() as *mut i8;
    let _v17: f64 = m.total;
    let _v18: i32 = unsafe { printf(_v16 as *const i8, _v17) };
    let _v19: u8 = m.code;
    let _v20: i32 = _v19 as i32;
    __retval = _v20;
    let _v21: i32 = __retval;
    return _v21;
}

fn union_double(arg1: f64) -> f64 {
    let mut value: f64 = 0.0;
    let mut __retval: f64 = 0.0;
    let mut s: Scalar = Scalar { tag: 0 };
    value = arg1;
    let _v0: f64 = value;
    unsafe {
        s.total = _v0;
    }
    let _v1: f64 = unsafe { s.total };
    __retval = _v1;
    let _v2: f64 = __retval;
    return _v2;
}

fn union_char(arg0: i8) -> i32 {
    let mut value: i8 = 0;
    let mut __retval: i32 = 0;
    let mut s: Scalar = Scalar { tag: 0 };
    value = arg0;
    let _v0: i8 = value;
    unsafe {
        s.tag = _v0;
    }
    let _v1: i8 = unsafe { s.tag };
    let _v2: i32 = _v1 as i32;
    __retval = _v2;
    let _v3: i32 = __retval;
    return _v3;
}

fn main() {
    let mut __retval: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v2: i32 = struct_values();
    let _v3: i32 = unsafe { printf(_v1 as *const i8, _v2) };
    let _v4: *mut i8 = b"%f\n\0".as_ptr() as *mut i8;
    let _v5: f64 = 4.5;
    let _v6: f64 = union_double(_v5);
    let _v7: i32 = unsafe { printf(_v4 as *const i8, _v6) };
    let _v8: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v9: i8 = 90;
    let _v10: i32 = union_char(_v9);
    let _v11: i32 = unsafe { printf(_v8 as *const i8, _v10) };
    let _v12: i32 = 0;
    __retval = _v12;
    let _v13: i32 = __retval;
    std::process::exit(_v13 as i32);
}
