tests/snapshots/nonnull_contract_positions.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn combine(arg3: *mut i32, arg4: i32, arg5: *mut i32, arg6: *mut i32) -> i32 {
    let mut left: *mut i32 = std::ptr::null_mut();
    let mut scale: i32 = 0;
    let mut right: *mut i32 = std::ptr::null_mut();
    let mut optional: *mut i32 = std::ptr::null_mut();
    let mut __retval: i32 = 0;
    left = arg3;
    scale = arg4;
    right = arg5;
    optional = arg6;
    let _v0: *mut i32 = left;
    let _v1: i32 = unsafe { *_v0 };
    let _v2: i32 = scale;
    let _v3: *mut i32 = right;
    let _v4: i32 = unsafe { *_v3 };
    let _v5: i32 = _v2 * _v4;
    let _v6: i32 = _v1 + _v5;
    let _v7: *mut i32 = optional;
    let _v8: bool = _v7 != std::ptr::null_mut();
    let _v9: i32 = if _v8 {
        let _v10: *mut i32 = optional;
        let _v11: i32 = unsafe { *_v10 };
        _v11
    } else {
        let _v12: i32 = 0;
        _v12
    };
    let _v13: i32 = _v6 + _v9;
    __retval = _v13;
    let _v14: i32 = __retval;
    return _v14;
}

fn difference(arg0: *mut i32, arg1: i32, arg2: *mut i32) -> i32 {
    let mut left: *mut i32 = std::ptr::null_mut();
    let mut scale: i32 = 0;
    let mut right: *mut i32 = std::ptr::null_mut();
    let mut __retval: i32 = 0;
    left = arg0;
    scale = arg1;
    right = arg2;
    let _v0: *mut i32 = left;
    let _v1: i32 = unsafe { *_v0 };
    let _v2: i32 = scale;
    let _v3: *mut i32 = right;
    let _v4: i32 = unsafe { *_v3 };
    let _v5: i32 = _v2 * _v4;
    let _v6: i32 = _v1 - _v5;
    __retval = _v6;
    let _v7: i32 = __retval;
    return _v7;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut left: i32 = 0;
    let mut right: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: i32 = 11;
    left = _v1;
    let _v2: i32 = 3;
    right = _v2;
    let _v3: *mut i8 = b"%d %d\n\0".as_ptr() as *mut i8;
    let _v4: i32 = 2;
    let _v5: *mut i32 = std::ptr::null_mut();
    let _v6: i32 = combine(std::ptr::addr_of_mut!(left), _v4, std::ptr::addr_of_mut!(right), _v5);
    let _v7: i32 = 2;
    let _v8: i32 = difference(std::ptr::addr_of_mut!(left), _v7, std::ptr::addr_of_mut!(right));
    let _v9: i32 = unsafe { printf(_v3 as *const i8, _v6, _v8) };
    let _v10: i32 = 0;
    __retval = _v10;
    let _v11: i32 = __retval;
    std::process::exit(_v11 as i32);
}
